[package]
name = "tetris"
version = "0.1.0"
authors = ["Andrei Jardan <jardan.andrei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["image","ttf"]

[dependencies.rand]
version = "0.8.1"
features = ["small_rng"]

[dependencies.serde]
version = "1.0.123"
features = ["derive"]

[dependencies.array2d]
version = "0.2.1"
features = ["serde"]

[dependencies]
toml = "0.5"
bincode = "1.3.1"
itertools = "0.10.0"
generational-arena = "0.2.8"