[package]
name = "tetris"
version = "0.1.0"
authors = ["Andrei Jardan <jardan.andrei@gmail.com>"]
edition = "2018"

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["image","ttf"]

[dependencies]
toml = "0.5"
bincode = "1.3.1"
itertools = "0.10.0"
slotmap = { version = "1.0.2", features = ["serde"] }
array2d = { version = "0.2.1", features = ["serde"] }
serde = { version = "1.0.123", features = ["derive"] }
rand = { version = "0.8.1", features = ["small_rng"] }
enum-select-derive = {path = "enum-select-derive"}
lazy_static = "1.4.0"