[package]
name = "tetris"
version = "0.1.0"
authors = ["Andrei Jardan <jardan.andrei@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies.sdl2]
version = "0.34.4"
default-features = false
features = ["image","ttf"]

[dependencies]
toml = "0.5.8"
bincode = "1.3.3"
itertools = "0.10.0"
array2d = { version = "0.2.1", features = ["serde"] }
serde = { version = "1.0.125", features = ["derive"] }
rand = { version = "0.8.3", features = ["small_rng"] }
enum-select-derive = {path = "enum-select-derive"}
lazy_static = "1.4.0"

[build-dependencies]
winres = "0.1"